# butler

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/core/dependencies/: get_discord_client.py
src/modules/discord/controllers/: __init__.py  hello_controller.py  pranjal_controller.py  samrat_controller.py
src/modules/discord/domain/entities/dtos/: route.py
src/modules/discord/router/: router.py
